--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ Date:02-02-2023 */
 
 * {
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-family: "Roboto Slab", serif;
 }
 
 .container {
@@ -13,7 +16,6 @@ Date:02-02-2023 */
 .banner {
     display: flex;
     background-image: url(../images/academy-banner.jpg);
-    /* height: 93vh; */
     min-height: 100vh;
     flex-direction: column;
     align-items: flex-end;
@@ -22,9 +24,7 @@ Date:02-02-2023 */
     padding: 10%;
     width: 100%;
 }
-/* .banner_logo img {
-    size: 100px;
-} */
+
 .banner_text {
     margin-top: 2%;
     width: 50%;
@@ -51,8 +51,6 @@ span {
     color: darkturquoise;
     width: fit-content;
     padding: 2%;
-    /* height: 45%; */
-    /* text-align: center; */
     top: 15%;
     right: 0;
 }
@@ -71,7 +69,6 @@ span {
 .third_div {
     background-image: url(../images/modulebg.jpg);
     height: 100vh;
-    /* margin-top: 2%; */
 }
 .contents {
     width: 80%;
@@ -97,7 +94,6 @@ span {
 .fourth_div {
     margin: 3% 0 3% 0;
     width: 100%;
-    /* height: 100vh; */
 }
 .course_desp2 p {
     text-align: center;
@@ -106,38 +102,7 @@ span {
     padding-right: 20%;
     font-size: 20px;
 }
-/* .twoimgs {
-    /* margin-top: 5%; */
-/* display: flex;
-    height: 60%;
-}
-.img1 {
-    background-image: url(../images/testsbg.jpg);
-    width: 50%;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-.img2 {
-    background-image: url(../images/intrvwbg.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width: 50%;
-}
-.inner_div {
-    height: 75%;
-    margin: 50px;
-    background-color: rgba(6, 8, 11, 0.7);
-    font-size: larger;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.inner_div p {
-    color: #fff;
-    text-align: center;
-}  */
-/* fourth_div closed  */
+
 .footer {
     width: 40%;
     margin: 5% auto 0 auto;
@@ -231,9 +196,6 @@ span {
         position: relative;
     }
     .description {
-        /* width: 685px;
-        display: flex;
-        flex-wrap: wrap; */
         position: static;
         width: 100%;
         margin: 0;
